--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,12 @@ body{ background:url(../img/pattern-body.jpg) center top repeat;}
 #na-midia .content .post .info span.data{ float: left; width: 100%; color: #666; font-family:Arial, Helvetica, sans-serif; font-size:16px; line-height: 32px; font-weight: normal;}
 
 /* FALE CONOSCO */
-#fale-conosco { width:100%; position:relative; height:536px;}
+#fale-conosco { width:100%; position:relative; height:536px; padding-top: 130px}
 #fale-conosco .wrap{ height:43px; position:relative; z-index:100;}
 #fale-conosco h3{ width:920px; border-bottom:1px solid #333; font-family:Arial, Helvetica, sans-serif; font-size:20px; height:43px; position:absolute; top:0; left:20px; margin:0;}
 #fale-conosco h3 span{ float:left; width:auto; border-bottom:3px solid #333; line-height:40px;}
-#fale-conosco #mapa{ width:100%; height:492px; border-top:1px solid #666; position:absolute; top:43px; left:0; z-index:10;}
-#fale-conosco #info{ width:390px; padding:40px 0 20px 50px; background:url(../img/info-bg.png) center top repeat; position:absolute; top:43px; left:50%; margin-left:-460px; z-index:100}
+#fale-conosco #mapa{ width:100%; height:492px; border-top:1px solid #666; position:absolute; top:173px; left:0; z-index:10;}
+#fale-conosco #info{ width:390px; padding:40px 0 20px 50px; background:url(../img/info-bg.png) center top repeat; position:absolute; top:173px; left:50%; margin-left:-460px; z-index:100}
 #fale-conosco #info div{ padding-bottom:20px; width:100%;}
 #fale-conosco #info img{ display:block; float:left;}
 #fale-conosco #info p{ float:left; color:#fff; font-family:Arial, Helvetica, sans-serif; font-size:15px; line-height:26px; margin-left:20px;}
