--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body{ background:url(../img/pattern-body.jpg) center top repeat;}
 #topo #languages a:hover, #topo #languages a.active{  color: #fff;}
 
 /* FOTO DO TOPO */
-#foto-topo { width:100%; background:url(../img/fotodestaque1-eng.jpg) center top no-repeat;}
+#foto-topo { width:100%; background:url(../img/fotodestaque1.jpg) center top no-repeat;}
+#foto-topo.eng {background:url(../img/fotodestaque1-eng.jpg) center top no-repeat;}
 #foto-topo .wrap{ overflow:hidden; height:490px;}
 #foto-topo.comvideo { width:100%; background:#000;}
 #foto-topo a{ display:block; text-decoration:none; cursor:pointer; width:100%; height:490px; float:left;}
