--- a/css/style.css
+++ b/css/style.css
@@ -67,21 +67,27 @@ body{ background:url(../img/pattern-body.jpg) center top repeat;}
 #faca-visita #slider .pagination li.current a, #faca-visita #slider .pagination li a:hover{ background-position:top right;}
 
 /* PROJETOS */
-#projetos { width:100%; border-bottom: 1px solid #414141;}
-#projetos #nav{float: left; padding: 0; margin: 0;}
-#projetos #nav li{ list-style-type: none; float: left; padding-bottom: 20px;}
-#projetos #nav li a{ display: block; width: 200px; height: 46px; text-indent: -99999px; padding: 0; margin: 0 20px; background-position: center bottom; background-repeat: none; }
-#projetos #nav li#lp1 a{ background-image: url(../img/projetos/folha-dirigida.png);}
-#projetos #nav li#lp2 a{ background-image: url(../img/projetos/jwt.png);}
-#projetos #nav li#lp3 a{ background-image: url(../img/projetos/webmotors.png);}
-#projetos #nav li:hover, #projetos #nav li.active{border-bottom: 2px solid #414141;}
-#projetos #nav li:hover a, #projetos #nav li.active a{ background-position: center top;}
+#projetos { width:100%;}
 #projetos .conteudo{ float: left; width: 100%; height: 450px; padding-top: 150px; display: none;}
 #projetos .conteudo.active{display: block;}
 #projetos .conteudo .col{ width:200px; padding:0 20px; float:left;}
 #projetos .conteudo .col p{ font-family:Arial, Helvetica, sans-serif; font-size:15px; line-height:30px; letter-spacing:-0.06em; color:#333; margin:0 0 25px 0;}
 #projetos .conteudo .col p strong{ color:#ee3042; font-weight:normal;}
 #projetos .conteudo .col img{ display:block; float:left; margin:0 0 25px 0;}
+
+/* PROJETOS NAV */
+.projetos-nav{ width:100%; border-bottom: 1px solid #414141; margin-bottom: 20px;}
+.projetos-nav .nav{float: left; padding: 0; margin: 0;}
+.projetos-nav .nav li{ list-style-type: none; float: left; padding-bottom: 22px;}
+.projetos-nav .nav li a{ display: block; width: 200px; height: 46px; text-indent: -99999px; padding: 0; margin: 0 20px; background-position: center bottom; background-repeat: none; }
+.projetos-nav .nav li#lp1 a{ background-image: url(../img/projetos/folha-dirigida.png);}
+.projetos-nav .nav li#lp2 a{ background-image: url(../img/projetos/jwt.png);}
+.projetos-nav .nav li#lp3 a{ background-image: url(../img/projetos/webmotors.png);}
+.projetos-nav .nav li#lp4 a{ background-image: url(../img/projetos/travessa.png);}
+.projetos-nav .nav li#lp5 a{ background-image: url(../img/projetos/oglobo.png);}
+.projetos-nav .nav li#lp6 a{ background-image: url(../img/projetos/globosat.png);}
+.projetos-nav .nav li:hover, .projetos-nav .nav li.active{border-bottom: 2px solid #414141; padding-bottom: 20px;}
+.projetos-nav .nav li:hover a, .projetos-nav .nav li.active a{ background-position: center top;}
 
 /* PESQUISAS */
 #pesquisas{ width: 100%; padding-top: 130px;}
